// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders risk area 1`] = `
<div
  className=""
>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      Are you ure you want to delete this domain?
    </div>
    <div
      className={undefined}
    >
      <div
        className=""
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className={undefined}
        onClick={[Function]}
      >
        Yes, delete
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className=""
      >
        Error deleting domain.
      </div>
      <div
        className={undefined}
      >
        Please try again.
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <a
            className={undefined}
            href="/admin/riskAreas"
            onClick={[Function]}
          >
            Close
          </a>
          <div
            className={undefined}
            onClick={[Function]}
          >
            <div
              className={undefined}
            />
            <div
              className={undefined}
            >
              Delete domain
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Title:
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        Risk Area Title
      </div>
      <div
        className=""
      >
        <input
          name="editedTitle"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </div>
      <div
        className={undefined}
      >
        Order:
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        1
      </div>
      <div
        className=""
      >
        <input
          name="editedOrder"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="number"
          value={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`risk area error 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      Unable to load domain
    </div>
    <div
      className={undefined}
    >
      Sorry, something went wrong. Please try again.
    </div>
    <div
      className=""
      onClick={[Function]}
    >
      Try again
    </div>
  </div>
</div>
`;

exports[`risk area loading 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    Loading...
  </div>
</div>
`;
